--- a/src/styles/elements/responsive.css
+++ b/src/styles/elements/responsive.css
@@ -2,6 +2,22 @@
 /* Responsive styles */
 @media (max-width: 1400px) {
   .element-card {
+    width: 70px;
+    height: 70px;
+  }
+  
+  .dashed-connector {
+    width: 15px;
+    height: 70px;
+  }
+  
+  .f-block-container {
+    margin-left: 3.5rem;
+  }
+}
+
+@media (max-width: 1200px) {
+  .element-card {
     width: 65px;
     height: 65px;
   }
@@ -12,36 +28,20 @@
   }
   
   .f-block-container {
-    margin-left: 3.25rem;
-  }
-}
-
-@media (max-width: 1200px) {
-  .element-card {
-    width: 60px;
-    height: 60px;
-  }
-  
-  .dashed-connector {
-    width: 12px;
-    height: 60px;
-  }
-  
-  .f-block-container {
     margin-left: 3rem;
   }
 }
 
 @media (max-width: 992px) {
   .element-card {
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     padding: 2px;
   }
   
   .dashed-connector {
-    width: 10px;
-    height: 50px;
+    width: 12px;
+    height: 60px;
   }
   
   .element-card .text-lg {
@@ -60,18 +60,18 @@
 
 @media (max-width: 768px) {
   .element-card {
-    width: 45px;
-    height: 45px;
+    width: 50px;
+    height: 50px;
     padding: 2px;
   }
   
   .dashed-connector {
-    width: 8px;
-    height: 45px;
+    width: 10px;
+    height: 50px;
   }
   
   .f-block-container {
-    margin-left: 2rem;
+    margin-left: 2.25rem;
   }
   
   .periodic-table-container {
@@ -87,14 +87,14 @@
 
 @media (max-width: 640px) {
   .element-card {
-    width: 40px;
-    height: 40px;
+    width: 45px;
+    height: 45px;
     padding: 2px;
   }
   
   .dashed-connector {
     width: 8px;
-    height: 40px;
+    height: 45px;
   }
   
   .element-card .text-lg {
@@ -102,7 +102,7 @@
   }
   
   .f-block-container {
-    margin-left: 1.5rem;
+    margin-left: 1.75rem;
   }
   
   .periodic-table-container {
